--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <div id="new-id"></div>
+
+    <div id="error-message"></div>
     <script src="index.js"></script>
   </body>
 
